tests/snapshots/test_record_samples__event_json_multiple_empty_data_nodes_not_ignored.snap
---
source: tests/test_record_samples.rs
expression: "&value"

---
{
  "Event": {
    "EventData": {
      "Data": "fr-FR",
      "Data_1": "Set-Mailbox",
      "Data_10": "Afficher la forêt entière : 'False', Portée par défaut : « ave.local », Configuration du contrôleur de domaine : « DC.ave.local », Catalogue global préféré : « DC.ave.local », Contrôleurs de domaine préférés : « { DC.ave.local } »",
      "Data_11": "False",
      "Data_12": "0 objects execution has been proxied to remote server.",
      "Data_13": "0",
      "Data_14": "ActivityId: a3591746-a27b-447a-b8be-ff54ae3a46f1",
      "Data_15": "ServicePlan:;IsAdmin:True;",
      "Data_2": "-Identity \"Administrateur\" -DeliverToMailboxAndForward \"False\" -ForwardingSmtpAddress \"smtp:test2@example.com\"",
      "Data_3": "ave.local/Users/Administrateur",
      "Data_4": "S-1-5-21-186559946-3925841745-111227986-500",
      "Data_5": "S-1-5-21-186559946-3925841745-111227986-500",
      "Data_6": "Remote-ManagementShell-Unknown",
      "Data_7": "5668 w3wp#MSExchangePowerShellAppPool",
      "Data_8": "5",
      "Data_9": "00:00:26.0389557"
    },
    "System": {
      "Channel": "MSExchange Management",
      "Computer": "WEC.ave.local",
      "EventID": "1",
      "EventID_attributes": {
        "Qualifiers": "16384"
      },
      "EventRecordID": "3229",
      "Keywords": "0x80000000000000",
      "Level": "4",
      "Provider_attributes": {
        "Name": "MSExchange CmdletLogs"
      },
      "Security": null,
      "Task": "1",
      "TimeCreated_attributes": {
        "SystemTime": "2021-11-19T16:52:33.833733500Z"
      }
    }
  },
  "Event_attributes": {
    "xmlns": "http://schemas.microsoft.com/win/2004/08/events/event"
  }
}
