tests/snapshots/test_record_samples__event_json_sample_with_event_data_with_attributes_and_text.snap
---
source: tests/test_record_samples.rs
expression: "&value"

---
{
  "Event": {
    "#attributes": {
      "xmlns": "http://schemas.microsoft.com/win/2004/08/events/event"
    },
    "EventData": {
      "Binary": null,
      "Data": {
        "#text": [
          "10.00.",
          "15063",
          "",
          "Multiprocessor Free",
          "0"
        ]
      }
    },
    "System": {
      "Channel": "System",
      "Computer": "WIN-P4SIAA0SQCO",
      "EventID": {
        "#attributes": {
          "Qualifiers": 32768
        },
        "#text": 6009
      },
      "EventRecordID": 1,
      "Keywords": "0x80000000000000",
      "Level": 4,
      "Provider": {
        "#attributes": {
          "Name": "EventLog"
        }
      },
      "Security": null,
      "Task": 0,
      "TimeCreated": {
        "#attributes": {
          "SystemTime": "2017-07-12T17:16:28.214161Z"
        }
      }
    }
  }
}
