tests/snapshots/test_record_samples__event_json_sample_with_separate_json_attributes.snap
---
source: tests/test_record_samples.rs
expression: "&value"

---
{
  "Event": {
    "EventData": {
      "param1": "86400",
      "param2": "SuppressDuplicateDuration",
      "param3": "Software\\Microsoft\\EventSystem\\EventLog"
    },
    "System": {
      "Channel": "Application",
      "Computer": "37L4247D28-05",
      "Correlation": null,
      "EventID": 4625,
      "EventID_attributes": {
        "Qualifiers": 16384
      },
      "EventRecordID": 1,
      "Execution_attributes": {
        "ProcessID": 0,
        "ThreadID": 0
      },
      "Keywords": "0x80000000000000",
      "Level": 4,
      "Opcode": 0,
      "Provider_attributes": {
        "EventSourceName": "EventSystem",
        "Guid": "{899daace-4868-4295-afcd-9eb8fb497561}",
        "Name": "Microsoft-Windows-EventSystem"
      },
      "Security": null,
      "Task": 0,
      "TimeCreated_attributes": {
        "SystemTime": "2010-11-10T18:18:51Z"
      },
      "Version": 0
    }
  },
  "Event_attributes": {
    "xmlns": "http://schemas.microsoft.com/win/2004/08/events/event"
  }
}
