tests/snapshots/test_record_samples__event_json_with_multiple_nodes_same_name_separate.snap
---
source: tests/test_record_samples.rs
expression: "&value"
---
{
  "Event_attributes": {
    "xmlns": "http://schemas.microsoft.com/win/2004/08/events/event"
  },
  "Event": {
    "System": {
      "Provider_attributes": {
        "Name": "Microsoft-Windows-CAPI2",
        "Guid": "{5bbca4a8-b209-48dc-a8c7-b23d3e5216fb}"
      },
      "EventID": 53,
      "Version": 0,
      "Level": 4,
      "Task": 53,
      "Opcode": 2,
      "Keywords": "0x4000000000000036",
      "TimeCreated_attributes": {
        "SystemTime": "2017-05-19T02:02:36.203125Z"
      },
      "EventRecordID": 28,
      "Correlation": null,
      "Execution_attributes": {
        "ProcessID": 1396,
        "ThreadID": 2132
      },
      "Channel": "Microsoft-Windows-CAPI2/Operational",
      "Computer": "WIN-M5327EF98B9",
      "Security_attributes": {
        "UserID": "S-1-5-21-1223297778-3299746493-1462173606-500"
      }
    },
    "UserData": {
      "CryptRetrieveObjectByUrlWire": {
        "URL_attributes": {
          "scheme": "http"
        },
        "URL": "http://crl.microsoft.com/pki/crl/products/microsoftrootcert.crl",
        "Object_attributes": {
          "type": "CONTEXT_OID_CRL",
          "constant": "2"
        },
        "Timeout": "PT9.984S",
        "Flags_attributes": {
          "value": "202005",
          "CRYPT_RETRIEVE_MULTIPLE_OBJECTS": "true",
          "CRYPT_WIRE_ONLY_RETRIEVAL": "true",
          "CRYPT_LDAP_SCOPE_BASE_ONLY_RETRIEVAL": "true",
          "CRYPT_PROXY_CACHE_RETRIEVAL": "true"
        },
        "AuxInfo_attributes": {
          "maxUrlRetrievalByteCount": "104857600",
          "fProxyCacheRetrieval": "true"
        },
        "AdditionalInfo": {
          "NetworkConnectivityStatus_attributes": {
            "value": "1",
            "_SENSAPI_NETWORK_ALIVE_LAN": "true"
          },
          "Action_attributes": {
            "name": "NoProxy"
          },
          "Action_1_attributes": {
            "name": "NoProxy"
          },
          "HTTPRequestHeadersInfo": {
            "Header": "GET /pki/crl/products/microsoftrootcert.crl HTTP/1.1",
            "Header_1": "Accept: */*",
            "Header_2": "If-None-Match: \"ea9ee7b1bc43d21:0\"",
            "Header_3": "If-Modified-Since: Mon, 21 Nov 2016 06:01:26 GMT",
            "Header_4": "Cache-Control: max-age = 900",
            "Header_5": "User-Agent: Microsoft-CryptoAPI/6.1",
            "Header_6": "Connection: Keep-Alive"
          },
          "HTTPResponseHeadersInfo": {
            "Header": "HTTP/1.1 200 OK",
            "Header_1": "Connection: keep-alive",
            "Header_2": "Date: Thu, 18 May 2017 11:37:58 GMT",
            "Header_3": "Content-Length: 813",
            "Header_4": "Content-Type: application/pkix-crl",
            "Header_5": "Last-Modified: Tue, 02 May 2017 22:24:24 GMT",
            "Header_6": "ETag: 0x8D491A9FD112A27",
            "Header_7": "Server: Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0",
            "Header_8": "x-ms-request-id: 477c132d-0001-0045-443b-c49ae1000000",
            "Header_9": "x-ms-version: 2009-09-19",
            "Header_10": "x-ms-lease-status: unlocked",
            "Header_11": "x-ms-blob-type: BlockBlob"
          }
        },
        "CacheInfo_attributes": {
          "lastSyncTime": "2017-05-19T02:02:36.203Z"
        },
        "CacheInfo": {
          "URLCacheResponseInfo_attributes": {
            "responseType": "CRYPTNET_URL_CACHE_RESPONSE_HTTP",
            "lastModifiedTime": "2017-05-02T22:24:24Z"
          }
        },
        "RetrievedObjects": {
          "CertificateRevocationList_attributes": {
            "fileRef": "0986764ED95D3C77F3F1AD8340EDD2F36C3BF8E7.crl",
            "issuerName": "Microsoft Root Certificate Authority"
          }
        },
        "EventAuxInfo_attributes": {
          "ProcessName": "Setup.exe"
        },
        "CorrelationAuxInfo_attributes": {
          "TaskId": "{74E4CD40-C966-49F5-B50A-032DFFEE57CA}",
          "SeqNumber": "7"
        },
        "Result_attributes": {
          "value": "0"
        }
      }
    }
  }
}
